--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -36,7 +36,7 @@ Version      : 1.0
 :root {
     --main-color: #9f9f9f;
     --heading-color: #fff;
-    --primary-color: #eb5d3a;
+    --primary-color: #3679b4;
     --lighter-color: #ccc;
     --subtitle-color: #ccc;
     --black-color: #000;
@@ -397,7 +397,7 @@ html {
 
 .section-title p {
     font-size: 16px;
-    padding: 0px 300px;
+    padding: 0px 50px;
 }
 
 .section-title h2 span {
@@ -905,7 +905,7 @@ html {
 }
 
 .header-inner {
-    padding: 30px 0px;
+    padding: 15px 0px;
     -webkit-transition: all 500ms ease;
     transition: all 500ms ease;
 }
@@ -933,7 +933,7 @@ html {
 }
 
 .main-header .logo img {
-    width: 120px;
+    width: 100px;
 }
 
 .main-header .nice-select .current {
@@ -1635,6 +1635,8 @@ ul.extra-skills li i {
     color:  var(--primary-color);
     font-size: 16px;
 }
+
+
 
 .resume-item .content .technologies {
     color:  var(--primary-color);
